--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,8 +30,9 @@
 }
 
 .fa-typo3 {
+    font-size: 50px;
     margin-left: 0.5rem;
-    font-size: 1.8rem;
+
 }
 
 .fa-tree-palm{
